syntax = "proto3";

package node;
option go_package="v1api";

message Volume {
    string Id = 1;
    string Location = 2;
    string LocationType = 3;
    string StorageClass = 4;
    string NodeId = 5;
    repeated string Owners = 6;
    int64 Size = 7;
    string Mode = 8;
    string Type = 9;
    string Health = 10;
    string OperationalStatus = 11;
    string CSIStatus = 12;
    bool Ephemeral = 13;
}

message AvailableCapacity {
    string Location = 1;
    string NodeId = 2;
    string storageClass = 3;
    int64 Size = 4;
}

message LogicalVolumeGroup {
    string Name = 1;
    string Node = 2;
    repeated string Locations = 3;
    int64 Size = 4;
    repeated string VolumeRefs = 5;
    string Status = 6;
}
